--- a/src/components/GrowthAnalysis.css
+++ b/src/components/GrowthAnalysis.css
@@ -615,8 +615,8 @@
   margin-bottom: 35px;
   
 }
-/* .rootdiv{
+.root-div{
   background-color: var(--white);
   height: 24.8vw;
   border-radius: 20px;
-} */
+}
