--- a/src/pages/InteviewTestReport.css
+++ b/src/pages/InteviewTestReport.css
@@ -329,8 +329,9 @@
   border-radius: var(--br-base);
   background-color: var(--white);
   color: var(--icon-grey);
-  left: -21vw; 
-  top: -9vw;
+  top: 4.8vw;
+  left: -0.2vw;
+  width:2vw;
 
 }
 .frame-parent136 {
