--- a/src/components/OverallAnalysis.css
+++ b/src/components/OverallAnalysis.css
@@ -138,6 +138,7 @@
     line-height: 2.78vw;
     color: #353535;
     margin-top:0.5vw;
+    font-weight:bold;
   }
   .consistency {
     position: absolute;
