--- a/src/components/ConfidenceMeter.css
+++ b/src/components/ConfidenceMeter.css
@@ -74,6 +74,7 @@
   left: 1.32vw;
   letter-spacing: -0.02em;
   line-height: 2.78vw;
+  font-weight:bold;
 }
 .frame-parent138 {
   position: absolute;
