--- a/src/components/GrowthAnalysis2.css
+++ b/src/components/GrowthAnalysis2.css
@@ -206,6 +206,7 @@
   left: 1.32vw;
   letter-spacing: -0.02em;
   line-height: 2.78vw;
+  font-weight:bold;
 }
 .frame-child125,
 .frame-child126 {
