--- a/src/components/LogoutPopup.css
+++ b/src/components/LogoutPopup.css
@@ -39,6 +39,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--white);
   text-align: left;
+  font-weight: bold;
 }
 .log-out-wrapper {
   border-radius: var(--br-5xs);
@@ -69,6 +70,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--purple);
   text-align: left;
+  font-weight: bold;
 }
 .cancel-wrapper {
   cursor: pointer;
@@ -111,4 +113,5 @@
   font-size: var(--font-size-9xl);
   color: var(--black);
   font-family: var(--font-avenir-lt-std);
+  font-weight: bold;
 }
