--- a/src/components/StartInterviewPopup.css
+++ b/src/components/StartInterviewPopup.css
@@ -34,6 +34,12 @@
   letter-spacing: -0.02em;
   line-height: 2.78vw;
 }
+.sde-1-interview23 {
+  position: relative;
+  letter-spacing: -0.02em;
+  line-height: 2.78vw;
+  font-weight:bold;
+}
 .saturday-august-29-group,
 .sde-1-interview-parent22 {
   display: flex;
@@ -85,6 +91,8 @@
   position: relative;
   letter-spacing: -0.02em;
   line-height: 2.38vw;
+  font-weight:light;
+  font-size: medium;
 }
 .dress-professionally-to-make-a-container {
   display: flex;
@@ -111,6 +119,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--white);
   text-align: left;
+  font-weight:bold;
 }
 .solarplay-bold-icon2 {
   position: relative;
@@ -134,6 +143,7 @@
   justify-content: center;
   box-sizing: border-box;
   gap: var(--gap-3xs);
+  width: 11vw;
 }
 .reschedule1 {
   position: relative;
@@ -141,6 +151,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--incomplete);
   text-align: left;
+  font-weight:bold;
 }
 .reschedule-container {
   cursor: pointer;
@@ -163,6 +174,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--danger);
   text-align: left;
+  font-weight:bold;
 }
 .cancel-frame {
   cursor: pointer;
