--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Avenir LT Std'; 
   src: url('/src/fonts/Avenir LT Std 65 Medium.otf') format('opentype');
+  font-weight:normal;
   
 }
 @font-face {
@@ -8,6 +9,20 @@
   src: url('/src/fonts/PingFang SC Regular.otf') format('opentype');
   
 }
+@font-face {
+  font-family: 'Avenir LT Std'; 
+  src: url('/src/fonts/Avenir LT Std 55 Roman.otf') format('opentype');
+  font-weight: light;
+  
+}
+@font-face {
+  font-family: 'Avenir LT Std'; 
+  src: url('/src/fonts/Avenir LT Std 85 Heavy.otf') format('opentype');
+  font-weight:bold;
+  
+}
+
+
 
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400&display=swap");
