--- a/src/pages/DreamCompanyDashboardIndivi.css
+++ b/src/pages/DreamCompanyDashboardIndivi.css
@@ -2,6 +2,7 @@
   position: relative;
   letter-spacing: -0.02em;
   line-height: 2.78vw;
+  font-weight:bold;
 }
 .dream-companies-wrapper {
   position: absolute;
@@ -145,6 +146,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--white);
   text-align: left;
+  font-weight:bold;
 }
 .icbaseline-plus-parent13 {
   cursor: pointer;
