--- a/src/pages/InterviewsDashboardIndividua.css
+++ b/src/pages/InterviewsDashboardIndividua.css
@@ -2,6 +2,7 @@
   position: relative;
   letter-spacing: -0.02em;
   line-height: 2.78vw;
+  font-weight:bold;
 }
 .interviews-wrapper {
   position: absolute;
@@ -41,6 +42,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--black);
   text-align: left;
+  
 }
 .upcoming-frame {
   cursor: pointer;
@@ -65,6 +67,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--purple);
   text-align: left;
+  font-weight:bold;
 }
 .completed-frame,
 .frame-parent168 {
@@ -106,7 +109,15 @@
   height: 1.85vw;
   overflow: hidden;
 }
-.div131,
+.div131{
+  position: relative;
+  font-size: var(--font-size-5xl);
+  letter-spacing: -0.02em;
+  line-height: 2.78vw;
+  font-family: var(--font-avenir-lt-std);
+  color: var(--black);
+  text-align: left;
+}
 .sde-1-interview12 {
   position: relative;
   font-size: var(--font-size-5xl);
@@ -115,6 +126,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--black);
   text-align: left;
+  font-weight:bold;
 }
 .div131 {
   font-size: var(--font-size-sm);
@@ -139,6 +151,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--purple);
   text-align: left;
+ 
 }
 .view-report-wrapper {
   border-radius: var(--br-9xs);
@@ -150,7 +163,8 @@
   align-items: center;
   justify-content: center;
   padding: var(--padding-5xs) var(--padding-base);
-  width: 4.73vw;
+  width: 5.2vw;
+  font-weight:bold;
 }
 .company-logo-parent11,
 .frame-parent170 {
@@ -219,6 +233,7 @@
   align-items: center;
   justify-content: center;
   padding: var(--padding-5xs) var(--padding-base);
+  font-weight:bold;
 }
 .company-logo-parent12 {
   position: relative;
@@ -266,6 +281,7 @@
   align-items: center;
   justify-content: center;
   padding: var(--padding-5xs) var(--padding-base);
+  font-weight:bold;
 }
 .company-logo-parent13 {
   position: relative;
@@ -309,6 +325,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--white);
   text-align: left;
+  font-weight:bold;
 }
 .icbaseline-plus-parent15 {
   cursor: pointer;
