--- a/src/pages/ResumePersonalInfo.css
+++ b/src/pages/ResumePersonalInfo.css
@@ -2,6 +2,7 @@
   position: relative;
   letter-spacing: -0.02em;
   line-height: 2.78vw;
+  font-weight:bold;
 }
 .choose-your-resume-template-wrapper {
   position: absolute;
@@ -35,6 +36,7 @@
   font-family: var(--font-avenir-lt-std);
   color: var(--icon-grey);
   text-align: left;
+  font-weight:bold;
 }
 .icbaseline-plus-parent1 {
   position: absolute;
