--- a/src/components/FASTPopup.css
+++ b/src/components/FASTPopup.css
@@ -3,6 +3,7 @@
   position: relative;
   letter-spacing: -0.02em;
   line-height: 2.78vw;
+  font-size: var(--font-size-9xl);
 }
 .instructions {
   position: relative;
@@ -30,7 +31,7 @@
 .frame-child176 {
   position: relative;
   width: 34.72vw;
-  height: 0.23vw;
+  height: 0.27vw;
 }
 .frame-parent236 {
   width: 34.72vw;
@@ -42,6 +43,7 @@
 }
 .please-ensure-that {
   margin-bottom: 0;
+  font-size: var(--font-size-lg);
 }
 .please-ensure-that-you-have-a {
   margin: 0;
@@ -75,6 +77,7 @@
   text-decoration: none;
   position: relative;
   color: inherit;
+  width: 17vw;
 }
 .rectangle-parent5 {
   display: flex;
