--- a/src/components/GrowthAnalysis2.css
+++ b/src/components/GrowthAnalysis2.css
@@ -407,6 +407,7 @@
   text-align: right;
   font-size: var(--font-size-3xs-1);
   color: var(--black);
+  margin-top:2vw;
 }
 .practice-tests-parent {
   position: relative;
