--- a/src/components/LogoutPopup.css
+++ b/src/components/LogoutPopup.css
@@ -125,4 +125,8 @@
     color: var(--black);
     font-family: var(--font-avenir-lt-std);
     font-weight: bold;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
