--- a/src/pages/GoScoreDashboardIndividual.css
+++ b/src/pages/GoScoreDashboardIndividual.css
@@ -1,133 +1,16 @@
 .attempt-now1 {
     font-weight: bold;
 }
-.topic-wise-analysis3 {
-    position: relative;
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
-}
-
-.topic-wise-analysis-wrapper1 {
+.cantileverlogoblack-2-icon21 {
     position: absolute;
-    top: 1.32vw;
-    left: 1.32vw;
-    color: var(--color-darkslategray-200);
-    font-weight: bold;
+    top: 2.91vw;
+    left: calc(50% - 7.21vw);
+    width: 11.77vw;
+    height: 2.45vw;
+    object-fit: cover;
 }
 
-.parent22,
-.parent23,
-.topic-wise-analysis-wrapper1 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-}
-
-.parent23 {
-    gap: var(--gap-9xs);
-    color: var(--color-darkslategray-200);
-}
-
-.parent22 {
-    gap: var(--gap-12xs);
-}
-
-.frame-child147,
-.rectangle-wrapper30 {
-    border-radius: var(--br-9xs);
-    height: 0.40vw;
-}
-
-.frame-child147 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--incomplete);
-}
-
-.rectangle-wrapper30 {
-    position: relative;
-    background-color: var(--color-gainsboro-300);
-    width: 10.85vw;
-}
-
-.frame-child148,
-.frame-child149,
-.frame-child150,
-.frame-child151 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: var(--br-9xs);
-    background-color: var(--danger);
-    width: 5.29vw;
-    height: 0.40vw;
-}
-
-.frame-child149,
-.frame-child150,
-.frame-child151 {
-    background-color: var(--color-mediumseagreen);
-    width: 9.33vw;
-}
-
-.frame-child150,
-.frame-child151 {
-    background-color: var(--incomplete);
-    width: 6.68vw;
-}
-
-.frame-child151 {
-    background-color: var(--color-mediumseagreen);
-    width: 8.99vw;
-}
-
-.frame-parent203,
-.frame-parent204,
-.proficiency-parent1 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-21xl);
-}
-
-.frame-parent203,
-.proficiency-parent1 {
-    gap: var(--gap-mini);
-}
-
-.frame-parent203 {
-    position: absolute;
-    top: 4.43vw;
-    left: 1.85vw;
-    flex-direction: row;
-    gap: var(--gap-92xl);
-    font-size: var(--font-size-base);
-}
-
-.frame-child153 {
-    position: relative;
-    border-top: 0.07vw solid var(--icon-grey);
-    box-sizing: border-box;
-    width: 47.82vw;
-    height: 0.07vw;
-    opacity: 0.18;
-}
-
-.line-parent9 {
-    position: absolute;
-    top: 6.94vw;
-    left: 1.32vw;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-27xl);
-}
-
-.riarrow-drop-down-line-icon6 {
+.phstar-icon15 {
     position: relative;
     width: 1.32vw;
     height: 1.32vw;
@@ -135,443 +18,199 @@
     flex-shrink: 0;
 }
 
-.view-more-parent4 {
+.my-go-score15 {
+    position: relative;
+    font-size: var(--font-size-xl);
+    font-family: var(--font-avenir-lt-std);
+    color: var(--purple);
+    text-align: left;
+    font-weight: bold;
+}
+
+.phstar-parent13 {
     position: absolute;
-    top: 25.79vw;
-    left: calc(50% - 2.98vw);
+    top: calc(50% - 0.79vw);
+    left: 2.91vw;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
-    gap: var(--gap-9xs);
-    font-size: var(--font-size-sm);
-}
-
-.frame-parent202 {
-    position: relative;
-    border-radius: var(--br-base);
-    background-color: var(--white);
-    width: 50.93vw;
-    overflow: auto;
-    height: 29vw;
-}
-
-.div162,
-.div163,
-.div167 {
-    position: relative;
-    display: inline-block;
-    width: 1.25vw;
-    height: 0.93vw;
-    flex-shrink: 0;
-}
-
-.div163,
-.div167 {
-    width: 0.86vw;
-}
-
-.div167 {
-    width: 0.46vw;
-}
-
-.parent25 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-start;
-    gap: var(--gap-11xl);
-}
-
-.growth-analysis,
-.number3 {
-    position: absolute;
-    left: 1.32vw;
-}
-
-.number3 {
-    top: 5.00vw;
-    width: 1.25vw;
-    height: 15.49vw;
-    opacity: 0.7;
-}
-
-.growth-analysis {
-    top: 1.32vw;
-    font-size: var(--font-size-5xl);
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
-    color: var(--color-darkslategray-200);
-    text-align: left;
-}
-
-.line-icon3 {
-    position: absolute;
-    top: -0.06vw;
-    left: 0;
-    width: 36.15vw;
-    height: 14.51vw;
-}
-
-.vector-icon29,
-.vector-icon30 {
-    position: absolute;
-    height: 74.11%;
-    width: 99.72%;
-    top: 25.84%;
-    right: 0;
-    bottom: 0.05%;
-    left: 0.28%;
-    max-width: 100%;
-    overflow: hidden;
-    max-height: 100%;
-}
-
-.vector-icon30 {
-    height: 65.99%;
-    width: 101.59%;
-    top: 23.67%;
-    right: -0.94%;
-    bottom: 10.33%;
-    left: -0.66%;
-}
-
-.elipes-icon3 {
-    position: absolute;
-    top: 5.32vw;
-    left: 5.63vw;
-    width: 25.05vw;
-    height: 6.07vw;
-}
-
-.union-icon3 {
-    width: 5.82vw;
-    height: 4.42vw;
-}
-
-.div168,
-.marks3,
-.union-icon3 {
-    position: relative;
-}
-
-.marks3 {
-    opacity: 0.8;
-}
-
-.div168 {
-    font-size: 0.91vw;
-    font-weight: 600;
-}
-
-.marks-parent1 {
-    position: absolute;
-    top: 0.52vw;
-    left: 1.59vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-}
-
-.frame-child160,
-.tool-tip3 {
-    position: absolute;
-    top: 3.34vw;
-    left: 3.67vw;
-    width: 5.03vw;
-    height: 3.63vw;
-}
-
-.frame-child160 {
-    top: 7.81vw;
-    left: 6.29vw;
-    border-right: 0.06vw dashed var(--purple);
-    box-sizing: border-box;
-    width: 0.06vw;
-    height: 6.67vw;
-}
-
-.line-parent10 {
-    position: absolute;
-    top: 5.39vw;
-    left: 3.47vw;
-    width: 36.15vw;
-    height: 14.46vw;
-    text-align: left;
-    font-size: 0.68vw;
-    color: var(--white);
-    font-family: var(--font-nunito);
-}
-
-.feb-2112 {
-    position: relative;
-}
-
-.feb-21-parent1 {
-    position: absolute;
-    top: 20.63vw;
-    left: calc(50% - 16.57vw);
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: flex-start;
-    gap: var(--gap-21xl);
-}
-
-.number-parent1 {
-    position: relative;
-    border-radius: var(--br-base);
-    background-color: var(--white);
-    width: 40.94vw;
-    height: 22.88vw;
-    overflow: hidden;
-    flex-shrink: 0;
-}
-
-.background-icon {
-    position: absolute;
-    height: 100.6%;
-    width: 100.86%;
-    top: -0.34%;
-    right: -0.43%;
-    bottom: -0.26%;
-    left: -0.43%;
-    max-width: 100%;
-    overflow: hidden;
-    max-height: 100%;
-}
-
-.div170 {
-    position: relative;
-    line-height: 1.19vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 1.32vw;
-    height: 0.88vw;
-    flex-shrink: 0;
-}
-
-.numbers {
-    position: absolute;
-    height: 49.78%;
-    width: 5%;
-    top: -0.72%;
-    right: 47.54%;
-    bottom: 50.95%;
-    left: 47.45%;
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
     justify-content: flex-start;
     gap: var(--gap-base);
 }
 
-.points-icon,
-.radar-data-icon {
-    max-width: 100%;
-    overflow: hidden;
-    max-height: 100%;
-}
-
-.radar-data-icon {
+.frame-child251 {
     position: absolute;
-    height: 54.42%;
-    width: 66.31%;
-    top: 32.67%;
-    right: 24.43%;
-    bottom: 12.91%;
-    left: 9.26%;
+    top: calc(50% - 1.69vw);
+    left: calc(50% - 8.80vw);
+    border-radius: var(--br-9xs);
+    width: 17.59vw;
+    height: 3.44vw;
+    opacity: 0.1;
 }
 
-.points-icon {
-    height: 55.94%;
-    width: 68.02%;
-    top: 32.03%;
-    right: 23.6%;
-    bottom: 12.02%;
-    left: 8.38%;
-}
-
-.div177,
-.div178,
-.points-icon {
-    position: absolute;
-}
-
-.div177 {
-    height: 9.67%;
-    width: 13.18%;
-    top: 0;
-    left: 43.41%;
-    line-height: 1.32vw;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.div178 {
-    top: 35.86%;
-    left: 86.82%;
-}
-
-.div178,
-.div179,
-.div180,
-.div181 {
-    height: 9.67%;
-    width: 13.18%;
-    line-height: 1.32vw;
-    display: flex;
-    align-items: center;
-}
-
-.div179 {
-    position: absolute;
-    top: 90.33%;
-    left: 73.42%;
-}
-
-.div180,
-.div181 {
-    text-align: right;
-}
-
-.div180 {
-    position: absolute;
-    top: 90.33%;
-    left: 13.41%;
-}
-
-.div181 {
-    top: 35.86%;
-    left: 0;
-}
-
-.div169,
-.div181,
-.text2 {
-    position: absolute;
-}
-
-.text2 {
-    top: -1.79vw;
-    left: -3.99vw;
-    width: 23.49vw;
-    height: 17.79vw;
-    display: none;
-    text-align: left;
-    font-size: var(--cn-regular-size);
-    font-family: var(--cn-regular);
-}
-
-.div169 {
-    top: 5.82vw;
-    left: calc(50% - 7.77vw);
-    background-color: var(--white);
-    width: 15.54vw;
-    height: 14.81vw;
-    text-align: center;
-    font-family: var(--en-regular);
-}
-
-.overall-analysis {
-    position: absolute;
-    top: 1.32vw;
-    left: 1.32vw;
-    font-size: var(--font-size-5xl);
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
-    color: var(--color-darkslategray-200);
-}
-
-.consistency3 {
-    position: absolute;
-    top: 94.61%;
-    left: 73.89%;
-}
-
-.communication,
-.time-management {
-    position: absolute;
-    top: 6.35vw;
-    left: 0;
-}
-
-.communication {
-    top: 16.20vw;
-    left: 4.23vw;
-}
-
-.confidence,
-.knowledge {
-    position: absolute;
-    top: 0;
-    left: 12.90vw;
-}
-
-.knowledge {
-    top: 6.55vw;
-    left: 23.61vw;
-}
-
-.consistency-parent {
-    position: absolute;
-    top: 4.50vw;
-    left: 2.12vw;
-    width: 27.71vw;
-    height: 17.18vw;
-    font-size: var(--cn-regular-size);
-    color: var(--black);
-}
-
-.parent26 {
+.frame-parent366,
+.octiconpeople-2412 {
     position: relative;
-    border-radius: var(--br-base);
-    background-color: var(--white);
-    width: 34.33vw;
-    height: 22.88vw;
     overflow: hidden;
     flex-shrink: 0;
-    text-align: left;
-    color: var(--text-5-);
 }
 
-.frame-parent205 {
+.frame-parent366select,
+.octiconpeople-2412 {
+    position: relative;
+    overflow: hidden;
+    flex-shrink: 0;
+}
+
+.frame-parent366 {
+    cursor: pointer;
+    border: 0;
+    padding: 0;
+    background-color: transparent;
+    border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
+    width: 19.18vw;
+    height: 4.03vw;
+}
+
+.frame-parent366select {
+    cursor: pointer;
+    border: 0;
+    padding: 0;
+    background-color: #efefff;
+    border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
+    width: 19.18vw;
+    height: 4.03vw;
+}
+
+.octiconpeople-2412 {
+    width: 1.36vw;
+    height: 1.36vw;
+}
+
+.interviews16 {
+    position: relative;
+    font-size: var(--font-size-xl);
+    font-family: var(--font-avenir-lt-std);
+    color: var(--icon-grey);
+    text-align: left;
+}
+
+.frame-parent365 {
     position: absolute;
-    top: 39.55vw;
-    left: 21.03vw;
+    top: 8.53vw;
+    left: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: var(--gap-xl);
-    text-align: right;
-    font-size: var(--en-regular-size);
-    color: var(--black);
 }
 
-.attempt-now1 {
+.frame-wrapper225 {
+    cursor: pointer;
+    border: 0;
+    padding: 0;
+    background-color: transparent;
+    position: absolute;
+    bottom: 2.65vw;
+    left: 0;
+    border-radius: 0 var(--br-5xs) var(--br-5xs) 0;
+    width: 19.18vw;
+    height: 4.03vw;
+    overflow: hidden;
+}
+
+.lauser-friends-icon {
+    position: relative;
+    width: 2.12vw;
+    height: 2.12vw;
+    overflow: hidden;
+    flex-shrink: 0;
+}
+
+.refer-and-earn {
+    position: relative;
+    font-size: var(--font-size-base);
+    letter-spacing: -0.02em;
+    line-height: 1.59vw;
+    font-family: var(--font-avenir-lt-std);
+    color: var(--color-darkslategray-100);
+    text-align: left;
+    font-weight: bold;
+}
+
+.refer-and-earn1 {
+    position: relative;
+    font-size: var(--font-size-base);
+    letter-spacing: -0.02em;
+    line-height: 1.59vw;
+    font-family: var(--font-avenir-lt-std);
+    color: var(--color-darkslategray-100);
+    text-align: left;
+}
+
+.frame-wrapper226,
+.lauser-friends-parent,
+.refer-and-earn-parent {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.lauser-friends-parent {
+    gap: var(--gap-3xs);
+}
+
+.frame-wrapper226 {
+    cursor: pointer;
+    border: 0;
+    padding: var(--padding-base) var(--padding-sm);
+    background-color: var(--color-lavender);
+    border-radius: var(--br-xs);
+    width: 14.68vw;
+    overflow: hidden;
+    box-sizing: border-box;
+}
+
+.illustration-child13 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 14.68vw;
+    height: 10.65vw;
+}
+
+.upgrade-to-pro16 {
+    position: relative;
+    font-weight: bold;
+}
+
+.get-exclusive-dashboard15 {
+    position: relative;
+    font-size: var(--font-size-sm);
+}
+
+.upgrade-to-pro-parent13 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: var(--gap-5xs);
+}
+
+.upgrade-now15 {
     position: relative;
     font-size: 1.05vw;
     font-family: var(--font-avenir-lt-std);
-    color: var(--purple);
+    color: var(--white);
     text-align: left;
 }
 
-.attempt-now-container {
+.upgrade-now-wrapper13 {
     cursor: pointer;
-    border: 0.07vw solid var(--purple);
-    padding: var(--padding-sm) var(--padding-98xl);
-    background-color: var(--color-mediumslateblue-100);
-    position: absolute;
-    top: 6.15vw;
-    left: calc(50% - 10.98vw);
+    border: 0;
+    padding: var(--padding-xs) var(--padding-21xl);
+    background-color: var(--purple);
     border-radius: var(--br-5xs);
     overflow: hidden;
     display: flex;
@@ -580,114 +219,44 @@
     justify-content: center;
 }
 
-.students-took {
-    margin: 0;
-}
-
-.students-took-fulcrum-container {
+.frame-parent368 {
     position: absolute;
-    top: 1.59vw;
-    left: 1.59vw;
-    display: inline-block;
-    width: 16.07vw;
-    opacity: 0.8;
-}
-
-.frame-parent207 {
-    position: relative;
-    border-radius: var(--br-base);
-    background-color: var(--white);
-    width: 24.34vw;
-    height: 10.32vw;
-    overflow: hidden;
-    flex-shrink: 0;
-}
-
-.my-go-score1 {
-    position: absolute;
-    top: 1.32vw;
+    top: calc(50% - 3.67vw);
     left: 1.32vw;
-    letter-spacing: -0.02em;
-    line-height: 2.78vw;
-}
-
-.frame-child161,
-.frame-child162 {
-    position: absolute;
-    top: calc(50% - 4.70vw);
-    left: calc(50% - 4.73vw);
-    border-radius: 50%;
-    background: linear-gradient(180deg, #fff 30.52%, rgba(255, 255, 255, 0.81));
-    width: 9.33vw;
-    height: 9.39vw;
-}
-
-.frame-child162 {
-    left: calc(50% - 4.66vw);
-    width: 9.39vw;
-    opacity: 0.2;
-}
-
-.div182 {
-    position: absolute;
-    top: 3.73vw;
-    left: calc(50% - 0.96vw);
-}
-
-.ellipse-parent4 {
-    position: absolute;
-    top: 5.69vw;
-    left: 2.38vw;
-    width: 9.45vw;
-    height: 9.39vw;
-}
-
-.frame-parent208 {
-    position: absolute;
-    top: 6.15vw;
-    left: 13.36vw;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
     justify-content: flex-start;
-    gap: var(--gap-5xs);
-    font-size: var(--font-size-base);
+    gap: var(--gap-lgi);
 }
 
-.my-go-score-parent {
+.illustration15 {
     position: relative;
-    border-radius: var(--br-base);
-    background-color: var(--purple);
-    width: 24.34vw;
-    height: 17.46vw;
-    overflow: hidden;
-    flex-shrink: 0;
-    font-size: var(--font-size-5xl);
-    color: var(--white);
+    width: 14.68vw;
+    height: 10.52vw;
 }
 
-.frame-parent206 {
+.frame-parent367 {
     position: absolute;
-    top: 9.13vw;
-    left: 73.28vw;
+    top: 35.12vw;
+    left: 2.25vw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     gap: var(--gap-xl);
-    font-size: var(--font-size-lg);
-    color: var(--text);
 }
 
-.go-score-dashboard-individual {
-    position: relative;
-    background-color: var(--color-ghostwhite-100);
-    width: 100%;
+.cantileverlogoblack-2-parent19 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--white);
+    width: 19.18vw;
     height: 64.95vw;
     overflow: hidden;
     text-align: left;
-    font-size: var(--font-size-5xl);
-    color: var(--icon-grey);
+    font-size: var(--font-size-xl);
+    color: var(--black);
     font-family: var(--font-avenir-lt-std);
 }
-
